--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:label="Εγγραφή Χρήστη"
             android:parentActivityName=".MainActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Login"
+            android:label="Είσοδος Χρήστη"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
