ADDED: Login Activity Chat activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:label="Είσοδος Χρήστη"
             android:parentActivityName=".MainActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".PrivateMessage"
+            android:label="Συνομιλία"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
