ADDED: Login activity Register activity Products activity Custom Product adapter Product Detail activity Private Message activity
User Model
Message Model
Product Model
Order Model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Login" />
-        <activity android:name=".Register"></activity>
+        <activity android:name=".Register" />
+        <activity android:name=".Products" />
+        <activity android:name=".PrivateMessage" />
+        <activity android:name=".ProductDetails"></activity>
     </application>
 
 </manifest>
