--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="gr.homedeco.www.homedeco">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +22,7 @@
         <activity android:name=".Products" />
         <activity android:name=".PrivateMessage" />
         <activity android:name=".ProductDetails" />
+        <activity android:name=".Cart"></activity>
     </application>
 
 </manifest>
