--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main">
+        <activity
+            android:name=".Main"
+            android:theme="@style/Theme.Design.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,6 +46,11 @@
             android:name=".Chat"
             android:parentActivityName=".Main"
             android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".CheckoutDialog" />
+        <activity
+            android:name=".AboutUs"
+            android:label="Λίγα λόγια"
+            android:parentActivityName=".Main" />
     </application>
 
 </manifest>
